# CareerOrbit

./: .gitignore  .replit  README.md  pnpm-lock.yaml  replit.md
artifacts/api-server/: Cargo.toml  package.json  run.sh
artifacts/api-server/src/: errors.rs  main.rs  models.rs
artifacts/api-server/src/lib/: nullstrip.ts
artifacts/api-server/src/routes/: aitrends.rs  aitrends.ts  careers.rs  careers.ts  dashboard.rs  dashboard.ts  exams.rs  exams.ts  index.ts  jobs.rs  jobs.ts  mod.rs  notes.rs  notes.ts  notifications.rs  notifications.ts  profile.rs  profile.ts
artifacts/edupath/: index.html  package.json
artifacts/edupath/.replit-artifact/: artifact.toml
artifacts/edupath/src/: App.tsx  index.css
artifacts/edupath/src/components/: layout.tsx  particle-background.tsx
artifacts/edupath/src/hooks/: use-auth.tsx
artifacts/edupath/src/pages/: ai-mentor.tsx  ai-trends.tsx  careers.tsx  dashboard.tsx  exam-detail.tsx  exams.tsx  home.tsx  jobs.tsx  login.tsx  notes.tsx  notifications.tsx  profile.tsx
lib/api-spec/: openapi.yaml
lib/db/src/schema/: aitrends.ts  careers.ts  exams.ts  index.ts  jobs.ts  notes.ts  notifications.ts  students.ts
